# AutoClickerTracker

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/: Analyzer.h  ClickProcessor.h  MouseHook.h  Utils.h
include/statistics/: Gmath.h
src/: Analyzer.cpp  ClickProcessor.cpp  MouseHook.cpp  main.cpp
src/statistics/: Gmath.cpp
